# tariff-search

./: .gitignore  ARCHITECTURE.md  DATA_PIPELINE.md  DOCUMENTATION.md  EXAMPLES.md  GOOGLE_DRIVE_SETUP.md  LICENSE  MANUAL_SETUP.md  PERSISTENT_STORAGE.md  PUBLISHING.md  README.md  RELEASE_NOTES.md  convert_existing_data.py  create_mock_data.py  demo_package_usage.py  download_with_gdown.py  example_google_drive.py  example_usage.py  fix_data_download.py  pyproject.toml  requirements.txt  setup.py  test_gdrive_download.py  test_package.py  test_persistent_storage.py  test_search.py
scripts/: prepare_release_data.py  setup_google_drive.py  upload_to_huggingface.py
tariff_search/: __init__.py  cli.py  data_preparation.py  download.py  searcher.py  utils.py
